feat: implement endpoint to create a report
